--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "espero-soft/artisan": "dev-main",
+        "illuminate/console": "*",
+        "illuminate/support": "*",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
